# mandelbrot_cpp

./: .gitignore  CMakeLists.txt  Makefile  mandelbrot_cpp.pro
src/: QTookMainDamn.hpp  do_mndlbrt.hpp  graphicsview.cpp  graphicsview.h  gt_mndlbrt.hpp  is_mndlbrt.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mndlbrt_bmp.hpp  mndlbrt_bmp_header.hpp  mndlbrt_bmp_info.hpp  mndlbrt_cfg.hpp  mndlbrt_color.hpp  mndlbrt_cpu_multithread.hpp  multithread_api.hpp
